# watcher

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  build.rs
examples/: sync_dir.rs
src/: error.rs  lib.rs  utils.rs
