[package]
name = "dir_watcher"
version = "0.3.0"
authors = ["Ares <coldswind@pm.me>", "KallenW <coopersjy@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/TENX-S/watcher"
readme = "README.md"
categories = ["filesystem"]
keywords = ["directory", "sync"]

[dependencies]
glob = "0.3.0"
thiserror = "1.0"
anyhow = "1.0.36"
parking_lot = "0.11.1"

[dev-dependencies]
anyhow = "1.0.36"

[build-dependencies]
anyhow = "1.0.36"

[features]
default = []
event = []
